--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-      <!-- Global site tag (gtag.js) - Google Analytics 
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="ht
