--- a/public/index.html
+++ b/public/index.html
@@ -2,4 +2,4 @@
 <html lang="en">
   <head>
       <!-- Global site tag (gtag.js) - Google Analytics -->
-      <script async src="ht
+      <script async src="https://www.googletagmanager.com/g
