--- a/public/index.html
+++ b/public/index.html
@@ -4,4 +4,5 @@
       <!-- Global site tag (gtag.js) - Google Analytics -->
       <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157541330-1"></script>
       <script>
-        window.dataLayer = window
+        window.dataLayer = window.dataLayer || [];
+        funct
