--- a/public/index.html
+++ b/public/index.html
@@ -5,4 +5,4 @@
       <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157541330-1"></script>
       <script>
         window.dataLayer = window.dataLayer || [];
-        funct
+        function gtag(){dataLayer.push(arguments
