--- a/public/index.html
+++ b/public/index.html
@@ -5,4 +5,5 @@
       <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157541330-1"></script>
       <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new D
