--- a/public/index.html
+++ b/public/index.html
@@ -6,4 +6,6 @@
       <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
-        gtag('js', new D
+        gtag('js', new Date());
+
+        gtag('config'
