--- a/public/index.html
+++ b/public/index.html
@@ -8,4 +8,5 @@
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
-        gtag('config'
+        gtag('config', 'UA-157541330-1');
+      <
