--- a/public/index.html
+++ b/public/index.html
@@ -14,4 +14,4 @@
 
     <meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<meta name="viewport" content="width=device-width, initial-
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=
