--- a/public/index.html
+++ b/public/index.html
@@ -15,4 +15,5 @@
     <meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-	<title>Expert Advisor Studio - Non
+	<title>Expert Advisor Studio - NonMQL</title>
+	<meta name="descr
