--- a/public/index.html
+++ b/public/index.html
@@ -16,4 +16,5 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	<title>Expert Advisor Studio - NonMQL</title>
-	<meta name="descr
+	<meta name="description"
+		content="Building t
