--- a/public/index.html
+++ b/public/index.html
@@ -17,4 +17,4 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	<title>Expert Advisor Studio - NonMQL</title>
 	<meta name="description"
-		content="Building t
+		content="Building the best Expert Advisor Studio is NonMQL's missi
