--- a/public/index.html
+++ b/public/index.html
@@ -18,4 +18,4 @@
 	<title>Expert Advisor Studio - NonMQL</title>
 	<meta name="description"
 		content="Building the best Expert Advisor Studio is NonMQL's mission. As a Fintech company, we help traders generate expert advisor in ONE minute." />
-	<meta n
+	<meta name="robots" content="max-snippet:-1, 
