--- a/public/index.html
+++ b/public/index.html
@@ -18,4 +18,5 @@
 	<title>Expert Advisor Studio - NonMQL</title>
 	<meta name="description"
 		content="Building the best Expert Advisor Studio is NonMQL's mission. As a Fintech company, we help traders generate expert advisor in ONE minute." />
-	<meta name="robots" content="max-snippet:-1, max-image-preview:large, max-v
+	<meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+	<meta prop
