--- a/public/index.html
+++ b/public/index.html
@@ -21,4 +21,4 @@
 	<meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1">
 	<meta property="og:title" content="Expert Advisor Studio - NonMQL" />
 	<meta property="og:type" content="website" />
-	<meta property="og:description" conten
+	<meta property="og:description" content="Building the best Exper
