--- a/public/index.html
+++ b/public/index.html
@@ -22,4 +22,4 @@
 	<meta property="og:title" content="Expert Advisor Studio - NonMQL" />
 	<meta property="og:type" content="website" />
 	<meta property="og:description" content="Building the best Expert Advisor Studio is NonMQL's mission. As a Fintech company, we help traders generate expert advisor in ONE minute." />
-	<meta property=
+	<meta property="og:url" content="<%= BASE_URL %>"
