--- a/public/index.html
+++ b/public/index.html
@@ -23,4 +23,4 @@
 	<meta property="og:type" content="website" />
 	<meta property="og:description" content="Building the best Expert Advisor Studio is NonMQL's mission. As a Fintech company, we help traders generate expert advisor in ONE minute." />
 	<meta property="og:url" content="<%= BASE_URL %>" />
-	<meta property="o
+	<meta property="og:site_name" content="NonMQ
