--- a/public/index.html
+++ b/public/index.html
@@ -24,4 +24,4 @@
 	<meta property="og:description" content="Building the best Expert Advisor Studio is NonMQL's mission. As a Fintech company, we help traders generate expert advisor in ONE minute." />
 	<meta property="og:url" content="<%= BASE_URL %>" />
 	<meta property="og:site_name" content="NonMQL">
-	<meta property="og:image" content="<%= BASE_URL 
+	<meta property="og:image" content="<%= BASE_URL %>images/nonmql_logo.png" 
