--- a/public/index.html
+++ b/public/index.html
@@ -25,4 +25,5 @@
 	<meta property="og:url" content="<%= BASE_URL %>" />
 	<meta property="og:site_name" content="NonMQL">
 	<meta property="og:image" content="<%= BASE_URL %>images/nonmql_logo.png" />
-	<meta property="og:image:secure_url" content="<%= BASE_URL %>i
+	<meta property="og:image:secure_url" content="<%= BASE_URL %>images/nonmql_logo.png" />
+	<meta p
