fs: nfsd: Fix signedness bug in compare_blob

--- a/public/index.html
+++ b/public/index.html
@@ -26,4 +26,4 @@
 	<meta property="og:site_name" content="NonMQL">
 	<meta property="og:image" content="<%= BASE_URL %>images/nonmql_logo.png" />
 	<meta property="og:image:secure_url" content="<%= BASE_URL %>images/nonmql_logo.png" />
-	<meta p
+	<meta property="og:image:type" content="image/png"
