--- a/public/index.html
+++ b/public/index.html
@@ -27,4 +27,5 @@
 	<meta property="og:image" content="<%= BASE_URL %>images/nonmql_logo.png" />
 	<meta property="og:image:secure_url" content="<%= BASE_URL %>images/nonmql_logo.png" />
 	<meta property="og:image:type" content="image/png" />
-	<meta property="og:image:wi
+	<meta property="og:image:width" content="70" />
+	<meta p
