--- a/public/index.html
+++ b/public/index.html
@@ -28,4 +28,5 @@
 	<meta property="og:image:secure_url" content="<%= BASE_URL %>images/nonmql_logo.png" />
 	<meta property="og:image:type" content="image/png" />
 	<meta property="og:image:width" content="70" />
-	<meta property="og:image:height" con
+	<meta property="og:image:height" content="100" />
+	<meta property="og:i
