--- a/public/index.html
+++ b/public/index.html
@@ -29,4 +29,4 @@
 	<meta property="og:image:type" content="image/png" />
 	<meta property="og:image:width" content="70" />
 	<meta property="og:image:height" content="100" />
-	<meta property="og:image:alt" content="NonMQL: Best Expert Advisor Studio
+	<meta property="og:image:alt" content="NonMQL: Best Expert Advisor Studio and we help traders generate
