--- a/public/index.html
+++ b/public/index.html
@@ -30,4 +30,5 @@
 	<meta property="og:image:width" content="70" />
 	<meta property="og:image:height" content="100" />
 	<meta property="og:image:alt" content="NonMQL: Best Expert Advisor Studio and we help traders generate expert advisor in ONE minute" />
-	<meta property="og:video" content="https://youtu.be/n
+	<meta property="og:video" content="https://youtu.be/nrtX9cmTkWU" />
+	<meta property="og:video:se
