--- a/public/index.html
+++ b/public/index.html
@@ -31,4 +31,5 @@
 	<meta property="og:image:height" content="100" />
 	<meta property="og:image:alt" content="NonMQL: Best Expert Advisor Studio and we help traders generate expert advisor in ONE minute" />
 	<meta property="og:video" content="https://youtu.be/nrtX9cmTkWU" />
-	<meta property="og:video:secure_url" content="ht
+	<meta property="og:video:secure_url" content="https://youtu.be/nrtX9cmTkWU" />
+	
