--- a/public/index.html
+++ b/public/index.html
@@ -32,4 +32,4 @@
 	<meta property="og:image:alt" content="NonMQL: Best Expert Advisor Studio and we help traders generate expert advisor in ONE minute" />
 	<meta property="og:video" content="https://youtu.be/nrtX9cmTkWU" />
 	<meta property="og:video:secure_url" content="https://youtu.be/nrtX9cmTkWU" />
-	
+	<meta property="
