--- a/public/index.html
+++ b/public/index.html
@@ -34,3 +34,4 @@
 	<meta property="og:video:secure_url" content="https://youtu.be/nrtX9cmTkWU" />
 	<meta property="og:video:width" content="1280" />
 	<meta property="og:video:height" content="720" />
+	<meta property="og:updated_
