--- a/public/index.html
+++ b/public/index.html
@@ -38,4 +38,5 @@
 	<meta name="twitter:card" content="summary">
 	<meta name="twitter:title" content="Expert Advisor Studio - NonMQL">
 	<meta name="twitter:description" content="Building the best Expert Advisor Studio is NonMQL's mission. As a Fintech company, we help traders generate expert advisor in ONE minute.">
-	<meta name="twitter:image" content="<%= BASE_URL %>
+	<meta name="twitter:image" content="<%= BASE_URL %>images/nonmql_logo.png">
+	<lin
