--- a/public/index.html
+++ b/public/index.html
@@ -40,4 +40,4 @@
 	<meta name="twitter:description" content="Building the best Expert Advisor Studio is NonMQL's mission. As a Fintech company, we help traders generate expert advisor in ONE minute.">
 	<meta name="twitter:image" content="<%= BASE_URL %>images/nonmql_logo.png">
 	<link rel="shortcut icon" href="<%= BASE_URL %>favicon.ico" />
-	<link
+	<link rel="canonical" href="<%= BASE_UR
