remove unnecessary cast

--- a/public/index.html
+++ b/public/index.html
@@ -41,4 +41,4 @@
 	<meta name="twitter:image" content="<%= BASE_URL %>images/nonmql_logo.png">
 	<link rel="shortcut icon" href="<%= BASE_URL %>favicon.ico" />
 	<link rel="canonical" href="<%= BASE_URL %>" />
-    <link rel="stylesheet" h
+    <link rel="stylesheet" href="https://fonts.googleap
