--- a/public/index.html
+++ b/public/index.html
@@ -41,4 +41,5 @@
 	<meta name="twitter:image" content="<%= BASE_URL %>images/nonmql_logo.png">
 	<link rel="shortcut icon" href="<%= BASE_URL %>favicon.ico" />
 	<link rel="canonical" href="<%= BASE_URL %>" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,30
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
+    <link r
