--- a/public/index.html
+++ b/public/index.html
@@ -42,4 +42,4 @@
 	<link rel="shortcut icon" href="<%= BASE_URL %>favicon.ico" />
 	<link rel="canonical" href="<%= BASE_URL %>" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
-    <link r
+    <link rel="stylesheet" href="https://cdn.js
