--- a/public/index.html
+++ b/public/index.html
@@ -43,3 +43,6 @@
 	<link rel="canonical" href="<%= BASE_URL %>" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+  </head>
+  <body>
+    <noscri
