--- a/public/index.html
+++ b/public/index.html
@@ -45,4 +45,5 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
   </head>
   <body>
-    <noscri
+    <noscript>
+      <strong>We're sorry but wtg
