--- a/public/index.html
+++ b/public/index.html
@@ -46,4 +46,4 @@
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but wtgen doesn't work properly without JavaScript enabled. Please enable
+      <strong>We're sorry but wtgen doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
