--- a/public/index.html
+++ b/public/index.html
@@ -47,3 +47,5 @@
   <body>
     <noscript>
       <strong>We're sorry but wtgen doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+    </noscript>
+    <div id="
