--- a/public/index.html
+++ b/public/index.html
@@ -48,4 +48,5 @@
     <noscript>
       <strong>We're sorry but wtgen doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="
+    <div id="app"></div>
+    <!-- built files 
