--- a/public/index.html
+++ b/public/index.html
@@ -49,4 +49,5 @@
       <strong>We're sorry but wtgen doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
-    <!-- built files 
+    <!-- built files will be auto injected -->
+  </b
